--- a/src/contact.njk
+++ b/src/contact.njk
@@ -83,7 +83,7 @@ title: Contact
   --color-background-alt: #3a9092;
   --color-border-active: #23494c;
   --color-border-default: #94a3b8;
-  --color-highlight: #7ecac7;
+  --color-highlight: #bf870b;
   --color-primary: #23494c;
   --color-primary-active: green;
   --color-text-default: white;
