--- a/src/resume.njk
+++ b/src/resume.njk
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Rakshit Soral Marketing CV Printable A4
+title: Demand Gen Marketing CV Printable A4
 ---
 
 <!DOCTYPE html>
@@ -55,7 +55,7 @@ title: Rakshit Soral Marketing CV Printable A4
             display: block;
         }
         html, body {
-            font-family: 'Lato', helvetica, arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             font-size: 11pt;
             color: #222;
         }
@@ -77,13 +77,13 @@ title: Rakshit Soral Marketing CV Printable A4
         #name h1 {
             font-size: 33pt;
             font-weight: 400;
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             line-height: 38pt;
-            color: #da2d2d;
+            color: #0e091d;
         }
         #name h2 {
             font-size: 18pt;
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             line-height: 20pt;
         }
         #mainArea {
@@ -107,7 +107,7 @@ title: Rakshit Soral Marketing CV Printable A4
         }
         .contactDetails ul { 
             list-style-type: none;
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
         }
         .contactDetails ul li {
             line-height: 24pt;
@@ -121,7 +121,7 @@ title: Rakshit Soral Marketing CV Printable A4
         }
         .contactDetails ul li a:hover { 
             box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-            color: #da2d2d;
+            color: #0e091d;
         }
         .icon {
             font-size: 14pt;
@@ -153,22 +153,22 @@ title: Rakshit Soral Marketing CV Printable A4
             width: 141mm;
         }
         .sectionTitle h1 {
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             font-weight: 400;
             text-transform: uppercase;
             font-size: 18pt;
-            color: #da2d2d;
+            color: #0e091d;
         }
         .sectionContent h2 {
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             text-transform: uppercase;
             font-size: 18pt;
         }
         .subDetails {
-            font-family: 'Lato', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             font-size: 11pt;
             font-weight: bold;
-            color: #da2d2d;
+            color: #0e091d;
         }
         .nameDetails {
             font-size: 11pt;
@@ -234,7 +234,7 @@ title: Rakshit Soral Marketing CV Printable A4
             border: none;
             outline: 0;
             color: #fff;
-            font-family: 'Oswald', Helvetica, Arial, sans-serif;
+            font-family: Caveat Brush, cursive;
             font-size: 20px;
             font-weight: bold;
             padding: 8px 20px;
