--- a/src/resume.njk
+++ b/src/resume.njk
@@ -273,11 +273,11 @@ title: Demand Gen Marketing CV Printable A4
             </div>
             <div class="mainDetails">
                 <div id="headshot">
-                    <img id="avatar" src="https://visualangle.ee/delivery/temp_image/icon.png" alt="Rakshit Soral" title="This is me" />
+                    <img id="avatar" src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral" title="This is me" />
                 </div>
                 <div id="name">
                     <h1>Rakshit Soral</h1>
-                    <h2>Marketing Leader</h2>
+                    <h2>Marketer</h2>
                 </div>
                 <div class="clear"></div>
             </div>
